[gd_scene load_steps=6 format=3 uid="uid://cw6u6aqn1nkxe"]

[ext_resource type="Script" path="res://assets/scripts/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bedub01q6huod" path="res://assets/textures/playerx32.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dyxxcn36oojhc" path="res://assets/textures/Playerx32Sneak.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(8, 6)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="PlayerIdle" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2")

[node name="PlayerSneak" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-1, 5)
texture = ExtResource("3")
offset = Vector2(0.5, 0.5)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="NormalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("1")

[node name="SneakCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 10)
shape = SubResource("2")
disabled = true

[node name="RightWallRay" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(10, 0)

[node name="LeftWallRay" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(-10, 0)
